grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: grafana
      phase: prod
  template:
    metadata:
      labels:
        name: grafana
        phase: prod
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:5.3.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 200m
          volumeMounts:
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources
          - name: dashboard-providers
            mountPath: /etc/grafana/provisioning/dashboards
          - name: dashboards
            mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: datasources
        configMap:
          name: grafana-datasources
      - name: dashboard-providers
        configMap:
          name: grafana-dashboard-providers
      - name: dashboards
        configMap:
          name: grafana-dashboards
