grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.geek.per.sg
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
